2004-07-05  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/command.rb (Gem::Command::create_option_parser):
	Make the argument and option sections optional.  They are only
	printed if there are options or arguments defined.

2004-07-05  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* lib/rubygems/gem_commands.rb:
	  - scrubbed up the 'help' command a bit, removing its options
	  - added information to 'help commands'

2004-07-04  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* lib/rubygems/gem_commands.rb:
	  - modified generic help and examples
	  - improved 'list' and 'search' help, and fixed bug in 'search'

	* lib/rubygems/cmd_manager.rb: 
	  - explicit support for top-level commands --help and --version
	  - no more support for --examples and --commands

2004-07-04  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* lib/rubygems/gem_commands.rb:
	  - added 'list' and 'search' commands ('list' is no longer an alias
	    for 'query')
	  - modified return value from all 'arguments' methods (see command.rb)

	* lib/rubygems/cmd_manager.rb: added 'search' command.

	* lib/rubygems/command.rb:
	    (Command#create_option_parser): enhanced the option parser for 'help'
	                                    display
	    (Command#remove_option): added (to support 'list' and 'search')

	* Rakefile: added 'gem' target.  Runs "local" (not installed) command
	  and libraries.

2004-07-04  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* Rakefile: added 'install' target.

	* lib/rubygems/cmd_manager.rb: code formatting.

	* lib/rubygems/gem_commands.rb:
	  - refactored common install and update options into new module
	    InstallUpdateOptions
	      . consolidated option pairs (e.g. --test & --no-test ==> --[no-]test)
	      . --gen-rdoc is now --rdoc
	  - (UninstallCommand) corrected typo
	  - (InstallCommand) corrected output with local install

	* test/test_parse_commands.rb: :%s/--gen-rdoc/--rdoc/g

2004-07-03  Jim Weirich  <jim@weirichhouse.org>
